tests/baselines/reference/genericTypeReferenceWithoutTypeArgument3.errors.txt
==== tests/cases/compiler/genericTypeReferenceWithoutTypeArgument3.ts (14 errors) ====
    // it is an error to use a generic type without type arguments
    // all of these are errors 
    
    declare class C<T> {
        foo: T;
    }
    
    declare var c: C;
                   ~
!!! error TS2173: Generic type references must include all type arguments.
    
    declare var a: { x: C };
                        ~
!!! error TS2173: Generic type references must include all type arguments.
    declare var b: { (x: C): C };
                         ~
!!! error TS2173: Generic type references must include all type arguments.
                             ~
!!! error TS2173: Generic type references must include all type arguments.
    declare var d: { [x: C]: C };
                      ~~~~
!!! error TS1023: Index signature parameter type must be 'string' or 'number'.
                         ~
!!! error TS2173: Generic type references must include all type arguments.
                             ~
!!! error TS2173: Generic type references must include all type arguments.
    
    declare function f(x: C): C;
                          ~
!!! error TS2173: Generic type references must include all type arguments.
                              ~
!!! error TS2173: Generic type references must include all type arguments.
    
    declare class D extends C {}
                            ~
!!! error TS2173: Generic type references must include all type arguments.
    
    declare module M {
        export class E<T> { foo: T }
    }
    
    declare class D2 extends M.C { }
                               ~
!!! error TS2094: The property 'C' does not exist on value of type 'M'.
    declare class D3<T extends M.E> { }
                               ~~~
!!! error TS2173: Generic type references must include all type arguments.
    
    declare function h<T extends C>(x: T);
                                 ~
!!! error TS2173: Generic type references must include all type arguments.
    declare function i<T extends M.E>(x: T);
                                 ~~~
!!! error TS2173: Generic type references must include all type arguments.